--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,10 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <form>
-        <table>
-            {{ form }}
-        </table>
-        <input type="submit" value="Submit">
-    </form> 
-{% endblock %}
+  <form>
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
+  </form>
+  <!-- Присваиваем переменной data объект request.GET -->
+  {% with data=request.GET %}
+    <!-- В дальнейшем используем имя data вместо request.GET -->
+    {% if form.is_valid %}
+        <h2>Привет, {{ data.first_name }} {{ data.last_name}}</h2>
+        {% if birthday_countdown == 0 %}
+            <!-- ...выводим поздравление: -->
+            С днём рождения!
+        <!-- Если до дня рождения не ноль дней... -->
+        {% else %}
+            <!-- ...сообщаем, сколько осталось ждать: -->
+            Осталось дней до дня рождения: {{ birthday_countdown }}!
+      {% endif %}
+    {% endif %}
+  <!-- Когда заканчивается область шаблона, где нужна переменная, 
+    закрываем тег with -->
+  {% endwith %}
+{% endblock %} 
+
