--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,26 +1,33 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
-  <form>
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
-  </form>
-  <!-- Присваиваем переменной data объект request.GET -->
-  {% with data=request.GET %}
-    <!-- В дальнейшем используем имя data вместо request.GET -->
-    {% if form.is_valid %}
-        <h2>Привет, {{ data.first_name }} {{ data.last_name}}</h2>
-        {% if birthday_countdown == 0 %}
-            <!-- ...выводим поздравление: -->
-            С днём рождения!
-        <!-- Если до дня рождения не ноль дней... -->
-        {% else %}
-            <!-- ...сообщаем, сколько осталось ждать: -->
-            Осталось дней до дня рождения: {{ birthday_countdown }}!
-      {% endif %}
-    {% endif %}
-  <!-- Когда заканчивается область шаблона, где нужна переменная, 
-    закрываем тег with -->
-  {% endwith %}
-{% endblock %} 
+  <div class="card col-4">
+    <div class="card-header">
+      Калькулятор ожидания дня рождения
+    </div>
+    <div class="card-body">
+      <!-- Убрал дублирующуюся форму и оставил только одну с POST методом -->
+      <form method="post">
+        <!-- Добавьте тег csrf_token. Без него POST-запрос будет отклонён. -->
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% bootstrap_button button_type="submit" content="Отправить" %}
+      </form>
 
+      <!-- Присваиваем переменной data объект request.POST -->
+      {% with data=form.instance %}
+  {% if form.is_valid %}
+    ID новой записи в БД: {{ data.id }}
+    <hr>
+    <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
+    {% if birthday_countdown == 0 %}
+      <p>С днём рождения!</p>
+    {% else %}
+      <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>
+    {% endif %}
+  {% endif %}
+{% endwith %}
+    </div>
+  </div>
+{% endblock %}
