--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -2,32 +2,35 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-  <div class="card col-4">
-    <div class="card-header">
-      Калькулятор ожидания дня рождения
-    </div>
-    <div class="card-body">
-      <!-- Убрал дублирующуюся форму и оставил только одну с POST методом -->
-      <form method="post">
-        <!-- Добавьте тег csrf_token. Без него POST-запрос будет отклонён. -->
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        {% bootstrap_button button_type="submit" content="Отправить" %}
-      </form>
-
-      <!-- Присваиваем переменной data объект request.POST -->
-      {% with data=form.instance %}
-  {% if form.is_valid %}
-    ID новой записи в БД: {{ data.id }}
-    <hr>
-    <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
-    {% if birthday_countdown == 0 %}
-      <p>С днём рождения!</p>
+  <!-- Переносим тег with в самое начало блока content. -->
+  {% with data=form.instance %}
+    {% if '/edit/' in request.path %}
+      <!-- Вместо form.instance подставляем data. -->
+      <h1>Редактировать запись {{ data.pk }}</h1>
     {% else %}
-      <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>
+      <h1>Создать запись</h1>
     {% endif %}
-  {% endif %}
-{% endwith %}
+    <div class="card col-4">
+      <div class="card-header">
+        Калькулятор ожидания дня рождения
+      </div>
+      <div class="card-body">
+        <form method="post">
+          {% csrf_token %}
+          {% bootstrap_form form %}
+          {% bootstrap_button button_type="submit" content="Отправить" %}
+        </form>
+      </div>
     </div>
-  </div>
-{% endblock %}
+    {% if form.is_valid %}
+      ID записи в БД: {{ data.id }}
+      <hr>
+      <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
+      {% if birthday_countdown == 0 %}
+        <p>С днём рождения!</p>
+      {% else %}
+        <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>
+      {% endif %}
+    {% endif %}
+  {% endwith %}
+{% endblock %} 
